--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "start": "node backend/server",
     "server": "nodemon --experimental-modules backend/server",
     "client": "npm start --prefix frontend",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "data:import": "node --experimental-modules backend/seeder",
+    "data:destroy": "node --experimental-modules backend/seeder -d"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "dotenv": "^9.0.1",
     "express": "^4.17.1",
