--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.7",
     "morgan": "^1.10.0",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "shippo": "^1.6.0"
   },
   "devDependencies": {
     "concurrently": "^6.1.0",
