--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node --experimental-modules backend/server",
-    "server": "nodemon --experimental-modules backend/server",
+    "start": "node backend/server",
+    "server": "nodemon --ignore ./frontend/ backend/server",
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "data:import": "node --experimental-modules backend/seeder",
-    "data:destroy": "node --experimental-modules backend/seeder -d",
+    "data:import": "node backend/seeder",
+    "data:destroy": "node backend/seeder -d",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
   "author": "",
@@ -27,6 +27,7 @@
     "mongoose": "^5.12.7",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "objects-to-csv": "^1.3.6",
     "shippo": "^1.6.0"
   },
   "devDependencies": {
