--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "objects-to-csv": "^1.3.6",
-    "shippo": "^1.6.0"
+    "shippo": "^1.6.0",
+    "xlsx_data_as_json": "^1.1.0"
   },
   "devDependencies": {
     "concurrently": "^6.1.0",
