--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^5.12.7",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "node-mailjet": "^3.3.5",
     "objects-to-csv": "^1.3.6",
     "shippo": "^1.6.0",
     "xlsx_data_as_json": "^1.1.0"
